reorder the topics